extend the realtime feature